// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";

service EngineExpressionProtoService {
  rpc renderExpression(ExpressionRenderBlobRequest) returns (ExpressionRenderBlobResponse);
  rpc evaluateExpression(ExpressionEvaluateBlobRequest) returns (ExpressionEvaluateBlobResponse);
}

message ExpressionRenderBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string expression = 2;
  bool skipUnresolvedExpressionsCheck = 3;
}

message ExpressionRenderBlobResponse {
  string value = 1;
}

message ExpressionEvaluateBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string expression = 2;
}

message ExpressionEvaluateBlobResponse {
  string value = 1;
}
